fix works image scale cursor visibility works filterlist fix nav layout fix added darker beige

--- a/src/style.scss
+++ b/src/style.scss
@@ -5,6 +5,10 @@
 
 * {
   cursor: none !important;
+
+  &:focus, &:focus-visible {
+    outline: none;
+  }
 }
 
 html {
